added all_labels_from_Orange_Book_datafiles.csv and made both csvs unique

--- a/ds_notebook/notebooks/pyspark_all_patents_in_Orange_Book.ipynb
+++ b/ds_notebook/notebooks/pyspark_all_patents_in_Orange_Book.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "labeled-cradle",
    "metadata": {
     "scrolled": true
@@ -56,13 +56,6 @@
       "df_1985_2016 size of patent_number column: 130259\n",
       "total number of unique patents from all files in /data: 8751\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:17: FutureWarning: The signature of `Series.to_csv` was aligned to that of `DataFrame.to_csv`, and argument 'header' will change its default value from False to True: please pass an explicit value to suppress this warning.\n"
-     ]
     }
    ],
    "source": [
@@ -82,16 +75,33 @@
     "df_all_patents=df_patent_txt[\"patent_no\"].append(df_1985_2016[\"patent_number\"])\n",
     "print(\"total number of unique patents from all files in /data:\", df_all_patents.unique().size)\n",
     "\n",
-    "df_all_patents.sort_values(axis=0).to_csv('all_patents_from_Orange_Book_datafiles.csv', index=False)"
+    "pd.Series(df_all_patents.sort_values(axis=0).unique()).to_csv('all_patents_from_Orange_Book_datafiles.csv', index=False, header=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "preceding-machine",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "df_patent_txt size of appl_no column: 90667\n",
+      "df_1985_2016 size of application_number column: 130259\n",
+      "total number of unique labels from all files in /data: 2602\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_all_labels=df_patent_txt[\"appl_no\"].append(df_1985_2016[\"application_number\"])\n",
+    "print(\"df_patent_txt size of appl_no column:\", df_patent_txt[\"appl_no\"].size)\n",
+    "print(\"df_1985_2016 size of application_number column:\", df_1985_2016[\"application_number\"].size)\n",
+    "\n",
+    "print(\"total number of unique labels from all files in /data:\", df_all_labels.unique().size)\n",
+    "pd.Series(df_all_labels.sort_values(axis=0).unique()).to_csv('all_labels_from_Orange_Book_datafiles.csv', index=False,header=False)"
+   ]
   },
   {
    "cell_type": "code",
