Update test data generation to include NDA number and published date in patents collection

--- a/ds_notebook/notebooks/sample_data_EDA_import_mongo.ipynb
+++ b/ds_notebook/notebooks/sample_data_EDA_import_mongo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85ec9b64",
+   "id": "501cbbb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "efba5001",
+   "id": "f29f3177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "74fe5973",
+   "id": "4d44c7a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +44,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06d4219a",
+   "id": "ac00d0b5",
    "metadata": {},
    "source": [
     "## Orange Book Data (NDA, Patents)\n",
     "\n",
-    "This will work with the `./FDA_drug_patents.csv` file in this repo."
+    "This will work with the `./data/Orange_Book/nber_1985_2016/FDA_drug_patents.csv` file in this repo."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "15aa7c8e",
+   "id": "d3a03c7c",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
     }
    ],
    "source": [
-    "orange_book_df = spark.read.csv('./FDA_drug_patents.csv', header=True, inferSchema=True)\n",
+    "orange_book_df = spark.read.csv('./data/Orange_Book/nber_1985_2016/FDA_drug_patents.csv', header=True, inferSchema=True)\n",
     "# Explore Columns\n",
     "orange_book_df.printSchema()\n",
     "orange_book_df.show()"
@@ -117,19 +117,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fc5b3e45",
+   "id": "20649705",
    "metadata": {},
    "outputs": [],
    "source": [
     "sample_df = (orange_book_df\n",
-    "                .filter(orange_book_df['active_ingredient'].isin('MORPHINE SULFATE', 'MINOXIDIL'))\n",
+    "                .filter(orange_book_df['active_ingredient'].isin('MORPHINE SULFATE'))\n",
     "                .select('patent_number', 'application_number'))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d5110434",
+   "id": "2f736b4c",
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +143,6 @@
       "|             21260|\n",
       "|             21671|\n",
       "|             20616|\n",
-      "|             21812|\n",
-      "|             19501|\n",
       "+------------------+\n",
       "\n"
      ]
@@ -158,13 +156,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aa5e4106",
+   "id": "2a0a2604",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[204223, 21260, 21671, 20616, 21812, 19501]"
+       "[204223, 21260, 21671, 20616]"
       ]
      },
      "execution_count": 7,
@@ -180,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f3dc0e06",
+   "id": "7f661dfc",
    "metadata": {},
    "outputs": [
     {
@@ -197,15 +195,12 @@
       "|      6071534|\n",
       "|      6066339|\n",
       "|      5931809|\n",
-      "|      6946120|\n",
       "|      5891467|\n",
       "|      9072781|\n",
       "|      6171613|\n",
       "|      9192608|\n",
-      "|      4139619|\n",
       "|      5807572|\n",
       "|      6241999|\n",
-      "|      4596812|\n",
       "|      6193998|\n",
       "|      5378474|\n",
       "|      5723147|\n",
@@ -222,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bc1a49d8",
+   "id": "a9c44d76",
    "metadata": {},
    "outputs": [
     {
@@ -235,15 +230,12 @@
        " '6071534',\n",
        " '6066339',\n",
        " '5931809',\n",
-       " '6946120',\n",
        " '5891467',\n",
        " '9072781',\n",
        " '6171613',\n",
        " '9192608',\n",
-       " '4139619',\n",
        " '5807572',\n",
        " '6241999',\n",
-       " '4596812',\n",
        " '6193998',\n",
        " '5378474',\n",
        " '5723147']"
@@ -261,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6b8342",
+   "id": "f9a26d8e",
    "metadata": {},
    "source": [
     "## OpenFDA Data (NDA, SPL Set ID)\n",
@@ -272,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "baa2e5f0",
+   "id": "fe1e4cbc",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9f856ca0",
+   "id": "93bde5f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e7676a99",
+   "id": "6fe21470",
    "metadata": {},
    "outputs": [
     {
@@ -321,11 +313,8 @@
       "|spl_set_id                          |\n",
       "+------------------------------------+\n",
       "|b62ee1ef-db55-417a-a02e-b103890f9c4b|\n",
-      "|8bf0000c-95f3-4a4d-830b-f5ac1539823d|\n",
-      "|4d328537-b7f5-43cc-9837-c5a0c6c390f8|\n",
       "|582f42e5-444e-4246-af8c-e7e28097c69a|\n",
       "|b5cee013-000f-4e35-a284-1f58add31b4d|\n",
-      "|1b5e2860-6855-4a65-8bbc-e064172a1adf|\n",
       "|1f53de80-efc8-4930-b3e3-fba0d026af05|\n",
       "|6fe62c06-5bab-4fc8-b546-ff015a1fc40c|\n",
       "+------------------------------------+\n",
@@ -344,18 +333,15 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5a208c48",
+   "id": "67a4dc81",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['b62ee1ef-db55-417a-a02e-b103890f9c4b',\n",
-       " '8bf0000c-95f3-4a4d-830b-f5ac1539823d',\n",
-       " '4d328537-b7f5-43cc-9837-c5a0c6c390f8',\n",
        " '582f42e5-444e-4246-af8c-e7e28097c69a',\n",
        " 'b5cee013-000f-4e35-a284-1f58add31b4d',\n",
-       " '1b5e2860-6855-4a65-8bbc-e064172a1adf',\n",
        " '1f53de80-efc8-4930-b3e3-fba0d026af05',\n",
        " '6fe62c06-5bab-4fc8-b546-ff015a1fc40c']"
       ]
@@ -372,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5b77486",
+   "id": "577d6e49",
    "metadata": {},
    "source": [
     "## Patent Data Import\n",
@@ -386,8 +372,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "87a0a389",
+   "execution_count": 14,
+   "id": "fc3bce19",
    "metadata": {},
    "outputs": [
     {
@@ -412,8 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4c732171",
+   "execution_count": 15,
+   "id": "24cd2c5f",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +408,7 @@
        "DataFrame[pat_no: string, claim_no: int, claim_txt: string, dependencies: string, ind_flg: int, appl_id: int]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,17 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "611dfcfe",
+   "execution_count": 16,
+   "id": "167057f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "349"
+       "305"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,17 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "7cef2022",
+   "execution_count": 17,
+   "id": "078c791f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17"
+       "14"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,16 +464,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e3f63f",
+   "id": "ce46f7ee",
    "metadata": {},
    "source": [
-    "We have 17 of the 19 patents matched using the Orange Book - the 2 newer ones (9XXXXXX) are not in the research dataset."
+    "We have 14 of the 16 patents matched using the Orange Book - the 2 newer ones (9XXXXXX) are not in the research dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8572a897",
+   "execution_count": 18,
+   "id": "02258a2a",
    "metadata": {},
    "outputs": [
     {
@@ -497,16 +483,16 @@
       "+-------+--------+--------------------+------------+-------+-------+\n",
       "| pat_no|claim_no|           claim_txt|dependencies|ind_flg|appl_id|\n",
       "+-------+--------+--------------------+------------+-------+-------+\n",
-      "|4139619|       7|7. A process for ...|        null|      1|5826180|\n",
-      "|4139619|       1|1. A topical comp...|        null|      1|5826180|\n",
-      "|4139619|       4|4. A process for ...|        null|      1|5826180|\n",
-      "|4139619|       8|8. The process of...|           7|      0|5826180|\n",
-      "|4139619|       9|9. The process of...|           7|      0|5826180|\n",
-      "|4139619|       5|5. The process of...|           4|      0|5826180|\n",
-      "|4139619|       3|3. The compositio...|           1|      0|5826180|\n",
-      "|4139619|       6|6. The process of...|           4|      0|5826180|\n",
-      "|4139619|       2|2. The compositio...|           1|      0|5826180|\n",
-      "|4596812|      13|13. In a pharmace...|        null|      1|6181959|\n",
+      "|5202128|      26|26. A method for ...|        null|      1|7574551|\n",
+      "|5202128|       1|1. A pH-dependent...|        null|      1|7574551|\n",
+      "|5202128|      19|19. The method of...|          18|      0|7574551|\n",
+      "|5202128|       5|5. The sustained ...|           1|      0|7574551|\n",
+      "|5202128|      20|20. The method of...|          19|      0|7574551|\n",
+      "|5202128|      11|11. The sustained...|          10|      0|7574551|\n",
+      "|5202128|      25|25. A pH-dependen...|        null|      1|7574551|\n",
+      "|5202128|      16|16. The sustained...|          15|      0|7574551|\n",
+      "|5202128|       7|7. The sustained ...|           2|      0|7574551|\n",
+      "|5202128|      15|15. The sustained...|          10|      0|7574551|\n",
       "+-------+--------+--------------------+------------+-------+-------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -519,46 +505,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bbff9db",
+   "id": "90bca32e",
    "metadata": {},
    "source": [
-    "There is no date info. So, using patent expiration from the Orange Book data instead."
+    "There is no date info or the Orange Book application number. So, using application number and patent expiration from the Orange Book data instead.\n",
+    "\n",
+    "Since there can be more than 1 NDA number for a patent, it will be collected as a list."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7bf11923",
+   "execution_count": 19,
+   "id": "714eed6c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+--------+--------------------+------------+-------+-------+-------------+-------------------+\n",
-      "| pat_no|claim_no|           claim_txt|dependencies|ind_flg|appl_id|patent_number|  patent_expiration|\n",
-      "+-------+--------+--------------------+------------+-------+-------+-------------+-------------------+\n",
-      "|4139619|       1|1. A topical comp...|        null|      1|5826180|      4139619|1996-02-13 00:00:00|\n",
-      "|4139619|       2|2. The compositio...|           1|      0|5826180|      4139619|1996-02-13 00:00:00|\n",
-      "|4139619|       3|3. The compositio...|           1|      0|5826180|      4139619|1996-02-13 00:00:00|\n",
-      "+-------+--------+--------------------+------------+-------+-------+-------------+-------------------+\n",
+      "+-------+--------+--------------------+------------+-------------------+-------------------+\n",
+      "| pat_no|claim_no|           claim_txt|dependencies|  patent_expiration|application_numbers|\n",
+      "+-------+--------+--------------------+------------+-------------------+-------------------+\n",
+      "|5202128|       1|1. A pH-dependent...|        null|2010-04-13 00:00:00|     [22321, 20616]|\n",
+      "|5202128|       2|2. The sustained ...|           1|2010-04-13 00:00:00|     [22321, 20616]|\n",
+      "|5202128|       3|3. The sustained ...|          35|2010-04-13 00:00:00|     [22321, 20616]|\n",
+      "+-------+--------+--------------------+------------+-------------------+-------------------+\n",
       "only showing top 3 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "orange_book_dates = orange_book_df.select('patent_number', 'patent_expiration').distinct()\n",
+    "orange_book_dates = orange_book_df.select('patent_number', 'patent_expiration', 'application_number').distinct()\n",
     "joined_df = (selected_patents\n",
     "             .join(orange_book_dates, orange_book_dates.patent_number==selected_patents.pat_no)\n",
+    "             .groupBy('pat_no', 'claim_no', 'claim_txt', 'dependencies', 'patent_expiration')\n",
+    "             .agg(collect_set('application_number').alias('application_numbers'))\n",
     "             .orderBy('pat_no', 'claim_no'))\n",
     "joined_df.show(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6e16d671",
+   "execution_count": 20,
+   "id": "7f59745e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,8 +558,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "524ff895",
+   "execution_count": 21,
+   "id": "4e6c679e",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +568,7 @@
        "DataFrame[pat_no: string, claim_no: int, claim_txt: string, dependencies: string, ind_flg: int, appl_id: int]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee601da2",
+   "id": "7b850e43",
    "metadata": {},
    "source": [
     "### Import Patents to MongoDB\n",
@@ -607,37 +597,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "88ac9397",
+   "execution_count": 22,
+   "id": "be7a7336",
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
     "patent_id_dict = defaultdict(list)\n",
-    "patent_expiration_dict = {}\n",
+    "patent_expiration_dict, patent_NDA_dict = {}, {}\n",
     "\n",
     "# Claims are already ordered in the patent_claim_list\n",
     "for row in patent_claim_list:\n",
-    "    patent_id_dict[row.patent_number].append({\n",
+    "    patent_id_dict[row.pat_no].append({\n",
     "        'claim_number': row.claim_no,\n",
     "        'claim_text': row.claim_txt,\n",
     "        'dependencies': row.dependencies\n",
     "    })\n",
-    "    patent_expiration_dict[row.patent_number] = str(row.patent_expiration)[:10]"
+    "    patent_expiration_dict[row.pat_no] = row.patent_expiration\n",
+    "    patent_NDA_dict[row.pat_no] = row.application_numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "674ad5c7",
+   "execution_count": 26,
+   "id": "8b3c6dbc",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:15: DeprecationWarning: update is deprecated. Use replace_one, update_one or update_many instead.\n",
-      "  from ipykernel import kernelapp as app\n"
+      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:18: DeprecationWarning: update is deprecated. Use replace_one, update_one or update_many instead.\n"
      ]
     }
    ],
@@ -650,9 +640,12 @@
     "\n",
     "for patent_id in patent_id_dict:\n",
     "    # One record per patent\n",
+    "    exp_date = patent_expiration_dict[patent_id]\n",
     "    record = {\n",
     "        'patent_number': patent_id,\n",
-    "        'expiration_date': patent_expiration_dict[patent_id],\n",
+    "        'expiration_date': str(exp_date)[:10],\n",
+    "        'published_date': str(exp_date.replace(year=exp_date.year - 10))[:10], # Add mock published date\n",
+    "        'application_numbers': patent_NDA_dict[patent_id],\n",
     "        'claims': patent_id_dict[patent_id]\n",
     "    }\n",
     "    # Upsert into Mongo\n",
@@ -662,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20575c48",
+   "id": "48e43736",
    "metadata": {},
    "outputs": [],
    "source": []
