--- a/ds_notebook/notebooks/sample_data_EDA_import_mongo.ipynb
+++ b/ds_notebook/notebooks/sample_data_EDA_import_mongo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "501cbbb8",
+   "id": "b1db4d5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f29f3177",
+   "id": "6657ae56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4d44c7a5",
+   "id": "fa3a4da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac00d0b5",
+   "id": "a0e8d781",
    "metadata": {},
    "source": [
     "## Orange Book Data (NDA, Patents)\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d3a03c7c",
+   "id": "02987f3d",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "20649705",
+   "id": "d72f385e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2f736b4c",
+   "id": "1df6f03a",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2a0a2604",
+   "id": "54a308a4",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7f661dfc",
+   "id": "c067e2dc",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a9c44d76",
+   "id": "a93a20a8",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9a26d8e",
+   "id": "ad6b78e5",
    "metadata": {},
    "source": [
     "## OpenFDA Data (NDA, SPL Set ID)\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fe1e4cbc",
+   "id": "ac349c61",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "93bde5f9",
+   "id": "0e3c6a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6fe21470",
+   "id": "8b86c69a",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "67a4dc81",
+   "id": "b5069208",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "577d6e49",
+   "id": "63352659",
    "metadata": {},
    "source": [
     "## Patent Data Import\n",
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fc3bce19",
+   "id": "f99cebea",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "24cd2c5f",
+   "id": "208c95f5",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "167057f1",
+   "id": "0179c60c",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "078c791f",
+   "id": "ffdde709",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce46f7ee",
+   "id": "eabed2dc",
    "metadata": {},
    "source": [
     "We have 14 of the 16 patents matched using the Orange Book - the 2 newer ones (9XXXXXX) are not in the research dataset."
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "02258a2a",
+   "id": "36f7e346",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bca32e",
+   "id": "eb66032f",
    "metadata": {},
    "source": [
     "There is no date info or the Orange Book application number. So, using application number and patent expiration from the Orange Book data instead.\n",
@@ -516,27 +516,73 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "714eed6c",
+   "id": "218eb300",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+--------+--------------------+------------+-------------------+-------------------+\n",
-      "| pat_no|claim_no|           claim_txt|dependencies|  patent_expiration|application_numbers|\n",
-      "+-------+--------+--------------------+------------+-------------------+-------------------+\n",
-      "|5202128|       1|1. A pH-dependent...|        null|2010-04-13 00:00:00|     [22321, 20616]|\n",
-      "|5202128|       2|2. The sustained ...|           1|2010-04-13 00:00:00|     [22321, 20616]|\n",
-      "|5202128|       3|3. The sustained ...|          35|2010-04-13 00:00:00|     [22321, 20616]|\n",
-      "+-------+--------+--------------------+------------+-------------------+-------------------+\n",
+      "+-------------+-------------------+------------------+\n",
+      "|patent_number|  patent_expiration|application_number|\n",
+      "+-------------+-------------------+------------------+\n",
+      "|      3705233|1989-12-05 00:00:00|         NDA017559|\n",
+      "|      3432489|1986-03-11 00:00:00|         NDA018333|\n",
+      "|      3957982|1993-05-18 00:00:00|         NDA019192|\n",
+      "|      4952586|2007-08-28 00:00:00|         NDA019677|\n",
+      "|      4018895|1994-04-19 00:00:00|         NDA020101|\n",
+      "|      4056635|1997-03-19 00:00:00|         NDA019627|\n",
+      "|      4507305|2001-05-21 00:00:00|         NDA019661|\n",
+      "|      4188390|2000-10-18 00:00:00|         NDA019668|\n",
+      "|      4724232|2005-09-17 00:00:00|         NDA019951|\n",
+      "|      5057616|2008-10-15 00:00:00|         NDA020529|\n",
+      "|      5116863|2009-05-26 00:00:00|         NDA020688|\n",
+      "|      5004758|2010-05-28 00:00:00|         NDA020671|\n",
+      "|      5900423|2015-05-19 00:00:00|         NDA020885|\n",
+      "|      5514698|2014-03-21 00:00:00|         NDA020968|\n",
+      "|      6063811|2017-05-16 00:00:00|         NDA021052|\n",
+      "|      5166178|2009-11-24 00:00:00|         NDA021214|\n",
+      "|      5776885|2015-07-07 00:00:00|         NDA020715|\n",
+      "|      6166213|2018-10-09 00:00:00|         NDA021153|\n",
+      "|      5908850|2015-12-04 00:00:00|         NDA021278|\n",
+      "|      6166213|2019-04-09 00:00:00|         NDA019810|\n",
+      "+-------------+-------------------+------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "ndaPaddingUDF = udf(lambda x: 'NDA' + str(x).zfill(6),StringType())\n",
+    "orange_book_dates = (orange_book_df.select('patent_number', 'patent_expiration', 'application_number')\n",
+    "                     .distinct()\n",
+    "                     .withColumn('application_number', ndaPaddingUDF(col('application_number'))))\n",
+    "orange_book_dates.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "94a666b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+--------+--------------------+------------+-------------------+--------------------+\n",
+      "| pat_no|claim_no|           claim_txt|dependencies|  patent_expiration| application_numbers|\n",
+      "+-------+--------+--------------------+------------+-------------------+--------------------+\n",
+      "|5202128|       1|1. A pH-dependent...|        null|2010-04-13 00:00:00|[NDA022321, NDA02...|\n",
+      "|5202128|       2|2. The sustained ...|           1|2010-04-13 00:00:00|[NDA022321, NDA02...|\n",
+      "|5202128|       3|3. The sustained ...|          35|2010-04-13 00:00:00|[NDA022321, NDA02...|\n",
+      "+-------+--------+--------------------+------------+-------------------+--------------------+\n",
       "only showing top 3 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "orange_book_dates = orange_book_df.select('patent_number', 'patent_expiration', 'application_number').distinct()\n",
     "joined_df = (selected_patents\n",
     "             .join(orange_book_dates, orange_book_dates.patent_number==selected_patents.pat_no)\n",
     "             .groupBy('pat_no', 'claim_no', 'claim_txt', 'dependencies', 'patent_expiration')\n",
@@ -547,8 +593,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7f59745e",
+   "execution_count": 21,
+   "id": "e70763af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,8 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "4e6c679e",
+   "execution_count": 22,
+   "id": "3a81d81c",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +614,7 @@
        "DataFrame[pat_no: string, claim_no: int, claim_txt: string, dependencies: string, ind_flg: int, appl_id: int]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b850e43",
+   "id": "a2886321",
    "metadata": {},
    "source": [
     "### Import Patents to MongoDB\n",
@@ -597,8 +643,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "be7a7336",
+   "execution_count": 23,
+   "id": "4e7d465a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,8 +665,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "8b3c6dbc",
+   "execution_count": 24,
+   "id": "17cf2920",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48e43736",
+   "id": "41836398",
    "metadata": {},
    "outputs": [],
    "source": []
